# concordance

./: Cargo.toml  command.json  setup.sh  test.ps1  test_commands.ps1
backup/src/: aggregates.rs  events.rs  eventsourcing.rs  provider.rs  state.rs
backup/src/consumers/: commands_consumer.rs  events_consumer.rs  manager.rs  mod.rs
backup/src/natsclient/: natsconn.rs
backup/src/workers/: aggregate_command.rs  mod.rs
concordance/: Cargo.toml
concordance-core/: Cargo.toml  README.md
concordance-core/src/: lib.rs
concordance-derive/: Cargo.toml
concordance-derive/src/: lib.rs
concordance/src/: cloudevents.rs  lib.rs  observability.rs  persistence.rs
concordance/src/workers/: aggregate_command.rs
examples/: basic_usage.rs
examples/user-app/: Cargo.toml
examples/user-app/src/: commands.rs  events.rs  lib.rs  main.rs
observability/: docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  tempo-config.yaml  vector.toml
observability/grafana/dashboards/: concordance.json
observability/grafana/provisioning/dashboards/: concordance.json  dashboard.json  dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
src/: config.rs  events.rs  eventsourcing.rs  lib.rs  main.rs  state.rs
src/consumers/: manager.rs  mod.rs
src/natsclient/: mod.rs
src/workers/: aggregate_command.rs  aggregate_command.rs.backup  mod.rs
