[workspace]
resolver = "2"
members = [
    "concordance-core",
    "concordance-derive", 
    "concordance",
    "examples/user-app"
]

# Optional: shared dependencies across workspace
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"

# This helps with build times and ensures consistent versions
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true