[package]
name = "concordance"
version = "0.1.0"
edition = "2021"

[lib]
name = "concordance"
path = "src/lib.rs"

[dependencies]
# Core event sourcing functionality
concordance-core = { path = "../concordance-core" }
concordance-derive = { path = "../concordance-derive" }

# Re-export original dependencies for backward compatibility
async-nats = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
async-trait = "0.1.88"
futures-util = "0.3.31"
tracing-futures = "0.2.5"
cloudevents-sdk = "0.8.0"
case = "1.0.0"
anyhow = "1.0.98"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_bytes = "0.11.17"

# Observability dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional: OpenTelemetry support
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

[features]
default = []
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dev-dependencies]
tokio-test = "0.4"