[package]
name = "user-app"
version = "0.1.0"
edition = "2021"

[dependencies]
concordance = { path = "../../concordance" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
anyhow = "1.0"
