# examples/user-app/Cargo.toml - Phase 3 Dependencies

[package]
name = "user-app"
version = "0.1.0"
edition = "2021"

# Multiple binaries
[[bin]]
name = "user-app"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "cloud_events_demo"
path = "src/bin/cloud_events_demo.rs"

[dependencies]
# Core Concordance framework
concordance = { path = "../../concordance", features = ["opentelemetry"] }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.20" }
opentelemetry-otlp = { version = "0.13" }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.21"

# UUID generation for events
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling for events
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
async-nats = "0.42.0"

# Optional: NATS client for direct testing (already included via concordance)
# async-nats = "0.41.0"